# pong

./: CMakeLists.txt
include/: ball.h  ball.hpp  paddle.h  paddle.hpp  utils.hpp
src/: ball.cpp  game.cpp  input.cpp  main.cpp  paddle.cpp
src/include/: ball.hpp  config.hpp  game.hpp  input.hpp  paddle.hpp  utils.hpp
